--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,16 @@ S3method(check_source,sfc)
 S3method(check_source,stars)
 S3method(check_source,stars_proxy)
 S3method(get_dim,SpatRaster)
+S3method(get_dim,SpatVector)
 S3method(get_dim,chracter)
 S3method(get_dim,ezgrid)
+S3method(get_dim,sf)
+S3method(get_dim,sfc)
 S3method(get_dim,stars)
 S3method(get_dim,stars_proxy)
 S3method(get_ext,SpatRaster)
 S3method(get_ext,SpatVector)
+S3method(get_ext,character)
 S3method(get_ext,ezgrid)
 S3method(get_ext,sf)
 S3method(get_ext,sfc)
@@ -21,12 +25,14 @@ S3method(get_ext,stars)
 S3method(get_ext,stars_proxy)
 S3method(get_proj,SpatRaster)
 S3method(get_proj,SpatVector)
+S3method(get_proj,character)
 S3method(get_proj,ezgrid)
 S3method(get_proj,sf)
 S3method(get_proj,sfc)
 S3method(get_proj,stars)
 S3method(get_proj,stars_proxy)
 S3method(sciplot,SpatRaster)
+S3method(sciplot,stars)
 export("%>%")
 export(check_source)
 export(ezgrid)
