--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr
+    magrittr,
+    sf,
+    terra,
+    vapour (>= 0.8.8.9009)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
