--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ezwarp
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.1.1
+Title: A utility tool for working with gdal warp in R
+Version: 0.0.1.2
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Hugh", "Graham", , "hugh.graham@permianglobal.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-9451-5010"))
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
 Encoding: UTF-8
