--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,18 +5,17 @@ Authors@R:
     person("Hugh", "Graham", , "hugh.graham@permianglobal.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9451-5010"))
 Description: What the package does (one paragraph).
-License: GPL (>= 3)
+License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr,
     scico,
-    sf,
     terra,
     vapour (>= 0.8.8.9009)
 Suggests: 
     covr,
     testthat (>= 3.0.0),
+    sf,
     stars
 Config/testthat/edition: 3
