--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,30 +1,25 @@
-url: ~
+url: https://permian-global-research.github.io/ezwarp/
 template:
   bootstrap: 5
   bootswatch: solar
   navbar:
-      bg: "primary"
-      type: "dark"
+    bg: primary
+    type: dark
   theme: arrow-dark
   bslib:
-    primary: "#FF963A"
-    success: "#FF963A"
-    
-    
+    primary: '#FF963A'
+    success: '#FF963A'
 reference:
-  - title: Warp a raster dataset
-    contents:
-      - contains("ezwarp")
-  - title: Define warp paramaters
-    contents:
-      - ezgrid
-  - title: Class Agnostic spatial helpers
-    contents:
-      - contains("get_dim")
-      - contains("get_ext")
-      - contains("get_proj")
-      - contains("get_source")
-  - title: Plot helpers
-    contents:
-      - contains("sciplot")
+- title: Warp a raster dataset
+  contents: contains("ezwarp")
+- title: Define warp paramaters
+  contents: ezgrid
+- title: Class Agnostic spatial helpers
+  contents:
+  - contains("get_dim")
+  - contains("get_ext")
+  - contains("get_proj")
+  - contains("get_source")
+- title: Plot helpers
+  contents: contains("sciplot")
 
