--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ezwarp
 Title: A utility tool for working with gdal warp in R
-Version: 0.0.2.0
+Version: 0.0.2.01
 Authors@R: 
     person("Hugh", "Graham", , "hugh.graham@permianglobal.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9451-5010"))
@@ -24,6 +24,7 @@ Suggests:
     sf,
     stars,
     rayshader
+Remotes: hypertidy/vapour
 Config/testthat/edition: 3
 Depends: 
     R (>= 4.1.0)
